--- a/client/src/components/Chat/chat.scss
+++ b/client/src/components/Chat/chat.scss
@@ -19,6 +19,7 @@ flex-grow: 1;
 // display: flex;
 // justify-content:flex-start;
 width: 100%;
+overflow-y: auto;
 
     }
 
@@ -52,7 +53,7 @@ width: 100%;
 .msg-box{
     min-width: 120px;
     padding: 15px 10px;
-    background-color: rgba(blue,0.1);
+    background-color: rgba(138, 130, 130, 0.646);
     color: #d2d2d2;
     border-radius: 20px;
     position: relative;
@@ -64,5 +65,6 @@ margin-bottom: 10px;
         bottom: 2px;
         right: 2px;
         font-size: x-small;
+        padding-right: 15px;
     }
 }
