--- a/client/src/components/Chat/chat.scss
+++ b/client/src/components/Chat/chat.scss
@@ -13,8 +13,9 @@
     &__heading{
 color: #d2d2d2;
 letter-spacing: 3px;
-    }
-    &__body{
+}
+&__body{
+    padding-top: 25px;
 flex-grow: 1;
 // display: flex;
 // justify-content:flex-start;
@@ -58,8 +59,17 @@ overflow-y: auto;
     border-radius: 20px;
     position: relative;
 width: fit-content;
-margin-bottom: 10px;
+margin-bottom: 30px;
+.username{
+    position: absolute;
+    font-size: 16px;
+    letter-spacing: 2px;
+    top: -25px;
+    left: 3px;
+    color: white;
+    width: fit-content;
 
+}
     span{
         position: absolute;
         bottom: 2px;
